2010-01-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Don't drop preroll buffers

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Fix typo in event name

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Improve discontinuities failure detection

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Do not round fragments duration to the upper value

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Fix default properties in the plugin description

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Consider a discontinuity receiving two fragments in a row with
	the same offset
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Don't use the first fragment in a stream to determine the target
	duration as it's usually longer
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Check for discontinuities in the stream to reset the segmenter

2010-01-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Don't change the component mood after a discontinuity. Let the
	pad monitor handle it.

2010-01-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Check for buffers discontinuities (on a muxer restart for example),
	and proceed with a soft restart: reset the playlist and wait for the